--- a/templates/home.html
+++ b/templates/home.html
@@ -4,102 +4,124 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meus Cursos</title>
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/home.css')}}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container">
-        <a class="logo" href="#">
-          <img
-            src="{{url_for('static', filename='img/logo_unitec_sem_fundo.png')}}"
-            alt="Logo"
-            style="max-width: 150px; height: auto"
-          />
-        </a>
-        <div class="nav">
-          <ul>
-            <li class="item ativo">
-              <a class="link" href="#">Página Inicial</a>
-            </li>
-            <li class="item">
-              <a class="link" href="#">Meus Cursos</a>
-            </li>
-          </ul>
+    <div class="header">
+      <h1 style="font-weight: 800">Seja Bem-vindo ao Portal do aluno</h1>
+      <nav class="navbar">
+        <div class="container1">
+          <a class="logo" href="{{ url_for('home.index') }}">
+            <img src="{{ url_for('static', filename='img/logo_unitec_sem_fundo.png') }}" alt="Logo" />
+          </a>
+          <div class="nav">
+            <ul>
+              <li class="item ativo">
+                <a class="link" href="{{ url_for('home.index') }}">Página Inicial</a>
+                <div class="circle-lc">LC</div>
+                <div class="dropdown-menu" id="dropdownMenu">
+                  <a href="{{ url_for('aluno.perfil_aluno') }}">Meu Perfil</a>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    <h1>Olá, Aluno!</h1>
-    <span class="blue-text">Seja bem vindo(a) ao </span>
-    <span class="yellow-text">Ava Unitec</span>
-    <p class="legenda">Clique no botão abaixo para acessar a área do aluno</p>
-    <button class="btn">Fazer login</button>
-    <!-- <h3>Meus Cursos</h3>
+      </nav>
+    </div>
+
+    <div class="nova-div">
+      <h2 style="font-size: 23px">
+        Encontre as disciplinas que você está cursando abaixo:
+      </h2>
+    </div>
+
     <div class="container">
+      <!-- Curso 1 -->
       <div class="course-card">
         <img
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuCbx8yJ_OTPJxGiJ4ZZbCwxqgD0-bn5vgGQ&s"
           alt="Matéria 1"
         />
         <div class="course-content">
-          <h3><a href="#">Matéria 1</a></h3>
+          <h3><a href="{{ url_for('materia.materias') }}">Matéria 1</a></h3>
           <div class="progress"></div>
         </div>
       </div>
 
+      <!-- Curso 2 -->
       <div class="course-card">
         <img
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSahsZw-z4bOcMcC7IppifFEc_DdiEW9U4v9w&s"
-          alt="Mtéria 2"
+          alt="Matéria 2"
         />
         <div class="course-content">
-          <h3><a href="#">Matéria 2</a></h3>
+          <h3><a href="{{ url_for('materia.materias') }}">Matéria 2</a></h3>
           <div class="progress"></div>
         </div>
       </div>
 
+      <!-- Curso 3 -->
       <div class="course-card">
         <img
           src="https://emaudioconcursos.com.br/wp-content/uploads/2023/08/Mulher-estudando-por-video-aula-300x150.jpg"
           alt="Matéria 3"
         />
         <div class="course-content">
-          <h3><a href="#">Matéria 3</a></h3>
+          <h3><a href="{{ url_for('materia.materias') }}">Matéria 3</a></h3>
           <div class="progress"></div>
         </div>
       </div>
 
+      <!-- Curso 4 -->
       <div class="course-card">
         <img
           src="https://emaudioconcursos.com.br/wp-content/uploads/2023/08/Homem-estudando-e-fazendo-anotacoes-2-300x150.jpg"
           alt="Matéria 4"
         />
         <div class="course-content">
-          <h3><a href="#">Matéria 4</a></h3>
+          <h3><a href="{{ url_for('materia.materias') }}">Matéria 4</a></h3>
           <div class="progress"></div>
         </div>
       </div>
 
+      <!-- Curso 5 -->
       <div class="course-card">
         <img
           src="https://emaudioconcursos.com.br/wp-content/uploads/2023/03/Como-Estudar-para-o-Concurso-PC-DF-300x150.jpg"
           alt="Matéria 5"
         />
         <div class="course-content">
-          <h3><a href="#">Matéria 5</a></h3>
+          <h3><a href="{{ url_for('materia.materias') }}">Matéria 5</a></h3>
           <div class="progress"></div>
         </div>
       </div>
 
+      <!-- Curso 6 -->
       <div class="course-card">
         <img
           src="https://emaudioconcursos.com.br/wp-content/uploads/2023/07/COMO-ESTUDAR-PARA-O-CONCURSO-UFRB-300x150.jpg"
           alt="Matéria 6"
         />
         <div class="course-content">
-          <h3><a href="#">Matéria 6</a></h3>
+          <h3><a href="{{ url_for('materia.materias') }}">Matéria 6</a></h3>
           <div class="progress"></div>
         </div>
       </div>
-    </div> -->
+    </div>
+
+    <script>
+      const circleLC = document.querySelector('.circle-lc');
+      const dropdownMenu = document.getElementById('dropdownMenu');
+    
+      circleLC.addEventListener('click', () => {
+        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+      });
+    
+      document.addEventListener('click', (event) => {
+        if (!circleLC.contains(event.target) && !dropdownMenu.contains(event.target)) {
+          dropdownMenu.style.display = 'none';
+        }
+      });
+    </script>
   </body>
 </html>
