--- a/templates/perfil_professor.html
+++ b/templates/perfil_professor.html
@@ -11,7 +11,7 @@
     <title>Perfil do Professor - UNIEURO</title>
     <!-- Define o título da página que será exibido na aba do navegador -->
 
-    <link rel="stylesheet" href="..\static/perfil_professor.css" />
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/perfil_professor.css')}}" />
     <!-- Link para o arquivo CSS externo que estiliza esta página -->
   </head>
   <body>
@@ -20,13 +20,13 @@
     <header>
       <!-- Cabeçalho da página, que contém a logo, o menu de navegação e as informações do perfil -->
       <div class="logo">
-        <img src="..\assets\logo_unitec_sem_fundo.png" alt="UNITEC Logo" />
+        <img src="{{url_for('static', filename = 'img/logo_unitec_sem_fundo.png')}}" alt="UNITEC Logo" />
         <!-- Exibe a logo da UNITEC no cabeçalho -->
       </div>
 
       <nav>
         <!-- Barra de navegação com links para páginas principais -->
-        <a href="C:\Users\Leandro\Desktop\UNITEC\UNITEC\templates\home.html"
+        <a href="{{ url_for('home.index') }}"
           >Página inicial</a>
       </nav>
 
@@ -34,7 +34,7 @@
         <span>LC</span>
         <!-- Exibe as iniciais do usuário -->
 
-        <a href="perfil_professor_editar.html" class="btn">Modo de edição</a>
+        <a href="{{url_for('perfil_professor.editar')}}" class="btn">Modo de edição</a>
         <!-- Botão para ativar o modo de edição do perfil -->
       </div>
     </header>
@@ -106,10 +106,10 @@
         <div class="miscellaneous">
           <h3>Notas:</h3>
           <!-- Seção de links para recursos variados -->
-          <a href="C:/Users/Leandro/Desktop/UNITEC/templates/tela_materia.html">Banco de dados avançado:</a>|
-          <a href="C:/Users/Leandro/Desktop/UNITEC/templates/tela_materia.html">Programação orientada a objetos:</a>|
-          <a href="C:/Users/Leandro/Desktop/UNITEC/templates/tela_materia.html">Projeto integrador de sistemas operacionais:</a>|
-          <a href="C:/Users/Leandro/Desktop/UNITEC/templates/tela_materia.html">Sistemas operacionais:</a> |
+          <a href="{{ url_for('materia.materias') }}">Banco de dados avançado:</a>|
+          <a href="{{ url_for('materia.materias') }}">Programação orientada a objetos:</a>|
+          <a href="{{ url_for('materia.materias') }}">Projeto integrador de sistemas operacionais:</a>|
+          <a href="{{ url_for('materia.materias') }}">Sistemas operacionais:</a> |
         </div>
       </aside>
     </main>
