--- a/templates/tela_materia.html
+++ b/templates/tela_materia.html
@@ -100,7 +100,7 @@
       </div>
       <div class="conteudo-topico">
         <div class="box-item">
-          <h3><a href="C:/Users/Leandro/Desktop/UNITEC/templates/tela_atividades.html">Atividade 1 - Programação em Java</a></h3>
+          <h3><a href="{{url_for('atividade.atividades')}}">Atividade 1 - Programação em Java</a></h3>
           <form id="form-atividade-1" enctype="multipart/form-data">
             <!-- Campo para selecionar arquivo -->
             <input type="file" id="file-atividade-1" name="file" style="display: none;" accept=".pdf,.doc,.docx,.txt" />
@@ -114,7 +114,7 @@
           </form>
         </div>
         <div class="box-item">
-          <h3><a href="{{url_for('atividades.tela_atividades')}}">Atividade 2 - Herança e Polimorfismo</a></h3>
+          <h3><a href="{{url_for('atividade.atividades')}}">Atividade 2 - Herança e Polimorfismo</a></h3>
           <form id="form-atividade-2" enctype="multipart/form-data">
             <!-- Campo para selecionar arquivo -->
             <input type="file" id="file-atividade-2" name="file" style="display: none;" accept=".pdf,.doc,.docx,.txt" />
